--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body{
     justify-content: flex-end;
 }
 section{
-    padding: 10rem 9% 2rem;
+    padding: 20rem 9% 2rem;
     min-height: 100vh;
 }
 
@@ -94,22 +94,23 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* padding: 0 9%;
+    padding: 0 9%;
     min-height: 100vh;
-    background-image: url(img/your-image.jpg); 
+    background-image: url(/img/neon\ 2.png); 
     background-size: cover;
-    background-position: center; */
+    background-position: center;
 }
 
 
 .home-content {
+    align-items: center;
     max-width: 60rem;
 }
 
 .home-content h1 {
     font-size: 5.6rem;
-    font-weight: 700;
-    line-height: 1.3;
+    font-weight: 1100;
+    line-height: 1.2;
 }
 
 .home-content h3 {
@@ -214,4 +215,43 @@ section{
 .home-content .social-media a:hover{
     background: var(--main-color);
     color: var(--text-color);
+}
+
+
+.home .profession-container {
+    position: absolute;
+    top: 50%;
+    right:0;
+    transform: translateY(-50);
+    width: 768px;
+    height: 768px;
+    background: green;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.home .profession-container .profession-box{
+    position: absolute;
+    top:0;
+    right: 0;
+    width: 768px;
+    height: 768px;
+    background: purple;
+    border-radius: 50%;
+}
+
+
+.prof-img{
+    height: 400px;
+    display: flex;
+}
+
+
+.home-img img{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 700px;
+    width: 700px;
+    pointer-events: none;
 }
