--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5) ;
+    backdrop-filter: blur(30px);
+    border-radius: 10px;
     z-index: 100;
+    /* margin-top: 30px;
+    /* margin-left: 40px; */
+    margin-right: 90px; */
 }
 
 .logo {
@@ -120,17 +126,39 @@ section{
 }
 
 
-.home-content .text-animate {
-    position: relative;
-    width: 32.8rem;
-}
-
 .home-content .text-animate h3 {
+    position: relative;
     font-size: 3.2rem;
     font-weight: 700;
     color: transparent;
-    -webkit-text-stroke: .6px var(--main-color);
+    -webkit-text-stroke: 0.6px var(--main-color);
+    overflow: hidden;
 }
+
+.home-content .text-animate h3::before {
+    content: attr(data-text);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0;
+    color: var(--main-color);
+    -webkit-text-stroke: 0vw var(--main-color);
+    border-right: 2px solid var(--main-color);
+    white-space: nowrap;
+    overflow: hidden;
+    animation: animate 6s linear infinite;
+}
+
+@keyframes animate {
+    0%, 10%, 100% {
+        width: 0;
+    }
+    70%, 90% {
+        width: 48%;
+    }
+}
+
+
 
 .home-content p {
     font-size: 1.6rem;
@@ -258,3 +286,79 @@ section{
     pointer-events: none;
     margin-right: 9.5rem;
 }
+
+
+
+/* ------about section--------- */
+
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: .2rem;
+    background: var(--secondary-color);
+    padding-bottom: 6rem;
+}
+
+.heading{
+    font-size: 5rem;
+    /* margin-bottom: .2rem; */
+    margin-top: 0.2rem;
+    text-align: center;
+}
+
+span{
+    color: var(--main-color);
+}
+
+.about-img{
+    position: relative;
+    width: 25rem;
+    height: 25rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-img img{
+    width: 90%;
+    border-radius: 50%;
+    border: 0.2rem solid var(--main-color);
+}
+
+.about-img .circle-spin{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border-top: .2rem solid var(--secondary-color);
+    border-bottom: .2rem solid var(--secondary-color);
+    border-left: .2rem solid var(--main-color);
+    border-right: .2rem solid var(--main-color);
+}
+
+.about-content{
+    text-align: center;
+
+}
+
+.about-content h3{
+    text-align: center;
+    font-size: 2.6rem;
+}
+
+.about-content p{
+    font-size: 1.2rem;
+    margin: 2rem 0 3rem;
+}
+
+.btn-box.btns{
+    display: inline-block;
+    width: 15rem;
+}
+
