--- a/css/style.css
+++ b/css/style.css
@@ -298,12 +298,12 @@ section{
     flex-direction: column;
     gap: .2rem;
     background: var(--secondary-color);
-    padding-bottom: 6rem;
+    padding-bottom: .2rem;
 }
 
 .heading{
     font-size: 5rem;
-    /* margin-bottom: .2rem; */
+    margin-bottom: .2rem;
     margin-top: 0.2rem;
     text-align: center;
 }
