--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,46 @@ body{
     cursor: pointer;
     justify-content: flex-end;
 }
+
+
+/* Default Menu Icon Hidden */
+#menu-icon {
+    display: none;
+    font-size: 3rem;
+    color: var(--text-color);
+    cursor: pointer;
+}
+
+/* Responsive Navbar */
+@media screen and (max-width: 768px) {
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: var(--background-color);
+        flex-direction: column;
+        align-items: center;
+        display: none;
+    }
+
+    .navbar.active {
+        display: flex;
+    }
+
+    .navbar a {
+        margin: 1.5rem 0;
+        font-size: 2rem;
+    }
+
+    #menu-icon {
+        display: block;
+    }
+}
+
+
+
+
 section{
     padding: 20rem 9% 2rem;
     min-height: 100vh;
